# kontomierz-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/: ci-cd-config.yaml
.github/workflows/: auto-tag.yml  ci.yml  publish.yml  semgrep-scheduled.yml  semgrep.yml
docs/: api.md
src/kontomierz_mcp/: __init__.py  __main__.py  client.py  response.py  server.py  validators.py
src/kontomierz_mcp/tools/: __init__.py  accounts.py  budgets.py  capabilities.py  charts_wealth.py  constants.py  reference.py  schedules.py  transactions.py
tests/: conftest.py
tests/e2e/: test_e2e.py
tests/integration/: test_all_tools.py
tests/smoke/: test_smoke.py
tests/unit/: test_client.py  test_compliance.py  test_tools.py  test_validators.py
