[project]
name = "kontomierz-mcp"
version = "1.0.0"
description = "MCP server for Kontomierz.pl personal finance API"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "requests>=2.31.0",
    "fastmcp>=2.0.0",
    "starlette>=0.38.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "bandit>=1.8.0",
]

[project.scripts]
kontomierz-mcp = "kontomierz_mcp.server:main"

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 130
extend-exclude = ["tests/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.format]
docstring-code-line-length = 130

[tool.ruff.lint.isort]
known-first-party = ["kontomierz_mcp"]

[tool.mypy]
strict = true
python_version = "3.11"
exclude = ["tests/"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, mocked, no I/O)",
    "integration: Integration tests (slow, requires real backend)",
    "smoke: Smoke tests (quick health check, requires local MCP server)",
    "e2e: End-to-end tests (full pipeline)",
]

[tool.coverage.run]
source = ["src/kontomierz_mcp"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
